--- a/Workflow.Rmd
+++ b/Workflow.Rmd
@@ -1945,8 +1945,8 @@ Editorial Office, as detailed below.
 
 # Author information
 
-NE and AOC authored the manuscript. CAV contributed substantive 
-edits to the manuscript. CAV and JCM provided reviews of the manuscript.
+N.E. and A.OC. authored the manuscript. C.A.V. contributed substantive 
+edits to the manuscript. C.A.V. and J.C.M. provided reviews of the manuscript.
 
 
 # Competing interests
@@ -1954,19 +1954,10 @@ edits to the manuscript. CAV and JCM provided reviews of the manuscript.
 No competing interests were disclosed.
 
 # Grant information
-Please state who funded the work discussed in this article, whether it is your 
-employer, a grant funder etc. Please do not list funding that you have that is 
-not relevant to this specific piece of research. For each funder, please state 
-the funder’s name, the grant number where applicable, and the individual to 
-whom the grant was assigned. If your work was not funded by any grants, 
-please include the line: 'The author(s) declared that no grants were involved 
-in supporting this work.'
 
-# Acknowledgments
-This section should acknowledge anyone who contributed to the research or the 
-article but who does not qualify as an author based on the criteria provided 
-earlier (e.g. someone or an organization that provided writing assistance). 
-Please state how they contributed; authors should obtain permission to 
-acknowledge from all those mentioned in the Acknowledgments section.
-
-Please do not list grant funding in this section.
+C.A.V. is a Chancellor’s Fellow funded by the University of Edinburgh.
+A.OC. was funded by the Chancellor's Fellowship granted to C.A.V.
+N.E. was funded by EMBO Long Term Fellowship no. 1194-2019 and the European
+Union’s Horizon 2020 research and innovation program under 
+Marie Sklodowska‐Curie Actions grant agreement No 892225.
+Work by J.C.M. was funded by grants from CRUK (C9545/A29580).
