--- a/Workflow.Rmd
+++ b/Workflow.Rmd
@@ -1492,16 +1492,39 @@ and the differential residual over-dispersion test.
 <!---We will further remove the genes that were excluded from the test and those 
 that are not expressed in at least 2 cells in either condition.---> 
 
-```{r combine-results}
+```{r combine-results, fig.cap="Difference in residual over-dispersion against log2 fold change in mean expression."}
+## combine results of differential mean and residual over-dispersion tests
 table_de_combined <- merge(table_de_mean, table_de_resdisp)
-ggplot(table_combined_de) +
+
+## merge with some summary statistics about genes
+gene_tests <- data.frame(
+  "GeneName" = rownames(dc_naive),
+  "ExpPropNaive" = rowMeans(dc_naive > 0),
+  "ExpPropActive" = rowMeans(dc_active > 0),
+  "nExpPropNaive" = rowSums(dc_naive > 0),
+  "nExpPropActive" = rowSums(dc_active > 0)
+)
+table_combined_genes <- merge(table_de_combined, gene_tests)
+## create list of generic plot parameters to use across a few plots
+plot_params <- list(
+  geom_pointdensity(),
+  scale_colour_viridis(name = "Density"),
+  theme(
+    # text = element_text(size = rel(3)),
+    legend.position = "bottom",
+    legend.text = element_text(angle = 45, size = 8, hjust = 1, vjust = 1),
+    legend.key.size =  unit(0.018, "npc")
+  )
+)
+## plot log2FC against difference of residual over-dispersion
+ggplot(table_de_combined) +
   aes(MeanLog2FC, ResDispDistance) +
   plot_params +
   xlim(-15, 15) +
-  labs(x = "log2 fold change in mean expression", 
-       y = "Difference in residual over-dispersion") +
-  geom_hline(yintercept = 0, colour = "firebrick", linetype = "dashed") +
-  geom_vline(xintercept = 0, colour = "firebrick", linetype = "dashed")
+  labs(
+    x = "log2 fold change in mean expression",
+    y = "Difference in residual over-dispersion"
+  )
 ```
 
 We can observe that changes in residual over-dispersion are not 
@@ -1516,52 +1539,34 @@ expression pattern in one population, or markers of a cell subpopulation that
 is more prevalent in one cell population relative to the other.
 
 ```{r, var-plots, fig.width = 6, fig.height = 7, fig.cap="A, C: log2 change in expression against against log mean expression for genes with higher residual over-dispersion in naive (A) cells and active (D) cells. B, D: Proportion of expressed cells for genes, with higher residual over-dispersion in naive cells (B) and active (D) cells. Dashed red lines in panels A and C represent a log fold change of zero, meaning no change in average expression. Dashed red lines in panels B and D represent the line described by y=x, representing equal detection levels in both populations."}
-gene_tests <- data.frame(
-  "GeneName" = rownames(dc_naive),
-  "ExpPropNaive" = rowMeans(dc_naive > 0),
-  "ExpPropActive" = rowMeans(dc_active > 0),
-  "nExpPropNaive" = rowSums(dc_naive > 0),
-  "nExpPropActive" = rowSums(dc_active > 0)
-)
-table_combined_de <- merge(table_de_combined, gene_tests)
 
-plot_params <- list(
-  geom_pointdensity(),
-  scale_colour_viridis(name = "Density"),
-  theme(
-    # text = element_text(size = rel(3)),
-    legend.position = "bottom",
-    legend.text = element_text(angle = 45, size = 8, hjust = 1, vjust = 1),
-    legend.key.size =  unit(0.018, "npc")
-  )
-)
 
 g1 <- ggplot(
-    table_combined_de[table_combined_de$ResultDiffResDisp == "Naive+", ]
+    table_combined_genes[table_combined_genes$ResultDiffResDisp == "Naive+", ]
   ) +
   aes(MeanOverall, MeanLog2FC) +
   plot_params +
   ylim(-15, 15) +
   scale_x_log10() +
   labs(x = "Mean expression", y = "log2 fold change") +
-  geom_abline(
-    slope = 0, intercept = 0, colour = "firebrick", linetype = "dashed"
+  geom_hline(
+    yintercept = 0, colour = "firebrick", linetype = "dashed"
   )
 
 g2 <- ggplot(
-    table_combined_de[table_combined_de$ResultDiffResDisp == "Active+", ]
+    table_combined_genes[table_combined_genes$ResultDiffResDisp == "Active+", ]
   ) +
   aes(MeanOverall, MeanLog2FC) +
   plot_params +
   ylim(-15, 15) +
   scale_x_log10() +
   labs(x = "Mean expression", y = "log2 fold change") +
-  geom_abline(
-    slope = 0, intercept = 0, colour = "firebrick", linetype = "dashed"
+  geom_hline(
+    yintercept = 0, colour = "firebrick", linetype = "dashed"
   )
 
 g3 <- ggplot(
-    table_combined_de[table_combined_de$ResultDiffResDisp == "Naive+", ]
+    table_combined_genes[table_combined_genes$ResultDiffResDisp == "Naive+", ]
   ) +
   aes(x = ExpPropNaive, y = ExpPropActive) +
   plot_params +
@@ -1574,7 +1579,7 @@ g3 <- ggplot(
   )
 
 g4 <- ggplot(
-    table_combined_de[table_combined_de$ResultDiffResDisp == "Active+", ]
+    table_combined_genes[table_combined_genes$ResultDiffResDisp == "Active+", ]
   ) +
   aes(x = ExpPropNaive, y = ExpPropActive) +
   plot_params +
@@ -1621,7 +1626,7 @@ be undertaken with care.
 library("tidyr")
 ## Utility function that plots logcounts of a set of genes defined by "ind_vg"
 plot_vg <- function(ind_vg) {
-  var_genes <- table_combined_de$GeneName[ind_vg]
+  var_genes <- table_combined_genes$GeneName[ind_vg]
   var_naive <- dc_naive[var_genes, , drop = FALSE]
   var_active <- dc_active[var_genes, , drop = FALSE]
   var_df <- rbind(
@@ -1648,10 +1653,10 @@ plot_vg <- function(ind_vg) {
 ## with similar levels of dropout &
 ## expressed in c. 50% of cells
 ## ie, genes that are probably unimodal but with higher variance
-ind_vg <- table_combined_de$ResultDiffResDisp %in% c("Naive+") &
-  table_combined_de$ResultDiffMean %in% c("NoDiff") &
-  abs(table_combined_de$ExpPropNaive - table_combined_de$ExpPropActive) < 0.05 &
-  (table_combined_de$ExpPropNaive + table_combined_de$ExpPropActive) > 1
+ind_vg <- table_combined_genes$ResultDiffResDisp %in% c("Naive+") &
+  table_combined_genes$ResultDiffMean %in% c("NoDiff") &
+  abs(table_combined_genes$ExpPropNaive - table_combined_genes$ExpPropActive) < 0.05 &
+  (table_combined_genes$ExpPropNaive + table_combined_genes$ExpPropActive) > 1
 
 g1 <- plot_vg(ind_vg) +
     theme(legend.position = "none")
@@ -1661,10 +1666,10 @@ g1 <- plot_vg(ind_vg) +
 ## with different levels of dropout &
 ## expressed in c. 50% of cells
 ## i.e., genes with more bursting pattern of expression
-ind_vg <- table_combined_de$ResultDiffResDisp %in% c("Naive+") &
-  table_combined_de$ResultDiffMean %in% c("NoDiff") &
-  abs(table_combined_de$ExpPropNaive - table_combined_de$ExpPropActive) > 0.45 &
-  (table_combined_de$ExpPropNaive + table_combined_de$ExpPropActive) > 1.1
+ind_vg <- table_combined_genes$ResultDiffResDisp %in% c("Naive+") &
+  table_combined_genes$ResultDiffMean %in% c("NoDiff") &
+  abs(table_combined_genes$ExpPropNaive - table_combined_genes$ExpPropActive) > 0.45 &
+  (table_combined_genes$ExpPropNaive + table_combined_genes$ExpPropActive) > 1.1
 g2 <- plot_vg(ind_vg)
 
 
@@ -1673,10 +1678,10 @@ g2 <- plot_vg(ind_vg)
 ## with similar levels of dropout &
 ## expressed in c. 50% of cells
 ## ie, genes that are probably unimodal but with higher variance
-ind_vg <- table_combined_de$ResultDiffResDisp %in% c("Active+") &
-  table_combined_de$ResultDiffMean %in% c("NoDiff") &
-  abs(table_combined_de$ExpPropNaive - table_combined_de$ExpPropActive) < 0.01 &
-  (table_combined_de$ExpPropNaive + table_combined_de$ExpPropActive) > 1.4
+ind_vg <- table_combined_genes$ResultDiffResDisp %in% c("Active+") &
+  table_combined_genes$ResultDiffMean %in% c("NoDiff") &
+  abs(table_combined_genes$ExpPropNaive - table_combined_genes$ExpPropActive) < 0.01 &
+  (table_combined_genes$ExpPropNaive + table_combined_genes$ExpPropActive) > 1.4
 g3 <- plot_vg(ind_vg) +
     theme(legend.position = "none")
 
@@ -1685,10 +1690,10 @@ g3 <- plot_vg(ind_vg) +
 ## with different levels of dropout &
 ## expressed in c. 50% of cells
 ## i.e., genes with more bursting pattern of expression
-ind_vg <- table_combined_de$ResultDiffResDisp %in% c("Active+") &
-  abs(table_combined_de$MeanLog2FC) < 1.2 &
-  abs(table_combined_de$ExpPropNaive - table_combined_de$ExpPropActive) > 0.2 &
-  (table_combined_de$ExpPropNaive + table_combined_de$ExpPropActive) > 1
+ind_vg <- table_combined_genes$ResultDiffResDisp %in% c("Active+") &
+  abs(table_combined_genes$MeanLog2FC) < 1.2 &
+  abs(table_combined_genes$ExpPropNaive - table_combined_genes$ExpPropActive) > 0.2 &
+  (table_combined_genes$ExpPropNaive + table_combined_genes$ExpPropActive) > 1
 g4 <- plot_vg(ind_vg)
 
 (g1 + g2) / (g3 + g4) + plot_annotation(tag_levels = "A")
